--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -61,7 +61,7 @@ jobs:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: abramow79/8ec6f623a216f147ea97e04350cfaf67c9375a58aa087a43b09153afc164033f:latest
+          tags: abramow79/infra-web:v1
           # ваш-логин-на-docker-hub/ваш-репозиторий-на-docker-hub:latest 
   deploy:
     runs-on: ubuntu-latest
