--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -60,8 +60,10 @@ jobs:
         # Пуш образа в Docker Hub 
         uses: docker/build-push-action@v2 
         with:
+          context: ./api_yamdb 
+          file: ./api_yamdb/Dockerfile
           push: true
-          tags: abramow79/infra-web:v1
+          tags: ${{ secrets.DOCKER_USERNAME }}/infra-web:v1
           # ваш-логин-на-docker-hub/ваш-репозиторий-на-docker-hub:latest 
   deploy:
     runs-on: ubuntu-latest
