--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -60,7 +60,7 @@ jobs:
         # Пуш образа в Docker Hub 
         uses: docker/build-push-action@v2 
         with:
-          context: ./api_yamdb 
+          context: ./api_yamddb
           file: ./api_yamdb/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/infra-web:v1
@@ -84,7 +84,7 @@ jobs:
           # Выполняет pull образа c DockerHub
 
           sudo docker pull ${{ secrets.DOCKER_USERNAME }}/infra-web:v1
-          
+
           # остановка всех контейнеров
           # sudo docker stop $(sudo docker ps -a -q)
           # sudo docker run --rm -d -p 5000:5000 abramow79/8ec6f623a216f147ea97e04350cfaf67c9375a58aa087a43b09153afc164033f
