--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -90,8 +90,8 @@ jobs:
           # sudo docker stop $(sudo docker ps -a -q)
           # sudo docker run --rm -d -p 5000:5000 abramow79/8ec6f623a216f147ea97e04350cfaf67c9375a58aa087a43b09153afc164033f
 
-          sudo docker-compose stop
-          sudo docker-compose rm web
+          sudo docker compose stop
+          sudo docker compose rm web
           touch .env
           echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
           echo DB_NAME=${{ secrets.DB_NAME }} >> .env
