--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -47,7 +47,7 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
   
-  
+
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
@@ -61,10 +61,10 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            # sudo docker pull ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
-            sudo docker pull abramow79/api_yamdb
-            # sudo docker compose stop
-            # sudo docker compose rm web
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
+            # sudo docker pull abramow79/api_yamdb
+            sudo docker compose stop
+            sudo docker compose rm web
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
