--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -83,4 +83,4 @@ jobs:
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          massage: ${{ github.workflow }} успешно выполнен!
+          message: ${{ github.workflow }} успешно выполнен!
