--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -8,10 +8,10 @@ services:
     env_file:
       - .env
   web:
-    build:
-        context: ../
-        dockerfile: api_yamdb/Dockerfile
-    # image: abramow79/api_yamdb:latest
+    # build:
+    #     context: ../
+    #     dockerfile: api_yamdb/Dockerfile
+    image: abramow79/api_yamdb:latest
     restart: always
     volumes:
       - static_value:/app/static/
