--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -8,6 +8,8 @@ RUN pip3 install -r requirements.txt --no-cache-dir
 
 # COPY api_yamdb .
 
-COPY . /app
+# COPY . /app
+
+COPY . .
 
 CMD ["gunicorn", "api_yamdb.wsgi:application", "--bind", "0:8000" ] 
